--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <p class="text">This site is not supported on your phone</p>
     <header class="header">
       <div class="container header__container">
         <h1 class="visually-hidden">Welcome to site Scoot</h1>
         <div class="header__box">
+          <button class="header__menu"></button>
           <a class="header__logo" href="index.html"
-            ><img src="./img/logo.svg" alt="" width="108" height="29"
+            ><img
+              class="header__logo--img"
+              src="./img/logo.svg"
+              alt=""
+              width="108"
+              height="29"
           /></a>
           <nav class="header__nav">
             <ul class="header__list">
@@ -158,7 +165,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer__container">
         <div class="footer__box">
           <a class="footer__logo" href="index.html"
@@ -194,6 +201,6 @@
           </li>
         </ul>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
