benefist bug fixed

--- a/index.html
+++ b/index.html
@@ -87,59 +87,74 @@
       </section>
       <section class="benefist">
         <div class="benefist__container">
-          <div class="container benefist__box--one">
-            <div class="benefist__box--four">
-              <h2 class="benefist__title">Easy to use riding telemetry</h2>
-              <p class="benefist__text">
-                The Scoot app is available with riding telemetry. This means it
-                can show you your average speed, how long you've been using the
-                scooter, your traveling distance, and many more things all in an
-                easy to use app.
-              </p>
-              <button class="benefist__btn">Learn More</button>
-            </div>
-            <img
-              class="benefist__img"
-              src="./img/benefist1.png"
-              alt=""
-              width="445"
-            />
-          </div>
-          <div class="container benefist__box--two">
-            <img
-              class="benefist__img"
-              src="./img/benefist2.png"
-              alt=""
-              width="445"
-            />
-            <div class="benefist__box--fiwe">
-              <h2 class="benefist__title">Easy to use riding telemetry</h2>
-              <p class="benefist__text">
-                The Scoot app is available with riding telemetry. This means it
-                can show you your average speed, how long you've been using the
-                scooter, your traveling distance, and many more things all in an
-                easy to use app.
-              </p>
-              <button class="benefist__btn">Learn More</button>
+          <div class="benefist__bgi--one">
+            <div class="benefist__bgi--decoration">
+              <div class="container benefist__content">
+                <div class="benefist__box--one">
+                  <h2 class="benefist__title">Easy to use riding telemetry</h2>
+                  <p class="benefist__text">
+                    The Scoot app is available with riding telemetry. This means
+                    it can show you your average speed, how long you've been
+                    using the scooter, your traveling distance, and many more
+                    things all in an easy to use app.
+                  </p>
+                  <button class="benefist__btn">Learn More</button>
+                </div>
+                <img
+                  class="benefist__img"
+                  src="./img/benefist1.png"
+                  alt=""
+                  width="445"
+                  height="445"
+                />
+              </div>
             </div>
           </div>
-          <div class="container benefist__box--three">
-            <div class="benefist__box--six">
-              <h2 class="benefist__title">Easy to use riding telemetry</h2>
-              <p class="benefist__text">
-                The Scoot app is available with riding telemetry. This means it
-                can show you your average speed, how long you've been using the
-                scooter, your traveling distance, and many more things all in an
-                easy to use app.
-              </p>
-              <button class="benefist__btn">Learn More</button>
+          <div class="benefist__bgi--two">
+            <div class="benefist__bgi--decoration1">
+              <div class="container benefist__content">
+                <img
+                  class="benefist__img"
+                  src="./img/benefist2.png"
+                  alt=""
+                  width="445"
+                  height="445"
+                />
+                <div class="benefist__box--one">
+                  <h2 class="benefist__title">Coming to a city near you</h2>
+                  <p class="benefist__text">
+                    Scoot is available in 4 major cities so far. We’re expanding
+                    rapidly, so be sure to let us know if you want to see us in
+                    your hometown. We’re aiming to let our scooters loose on 23
+                    cities over the coming year.
+                  </p>
+                  <button class="benefist__btn">Learn More</button>
+                </div>
+              </div>
             </div>
-            <img
-              class="benefist__img"
-              src="./img/benefist3.png"
-              alt=""
-              width="445"
-            />
+          </div>
+          <div class="benefist__bgi--three">
+            <div class="benefist__bgi--decoration2">
+              <div class="container benefist__content">
+                <div class="benefist__box--one">
+                  <h2 class="benefist__title">Zero hassle payments</h2>
+                  <p class="benefist__text">
+                    Our payment is as easy as one two three. We accept most
+                    credit cards and debit cards. You can also link your PayPal
+                    account inside the app. Need to pay later? No worries! You
+                    can defer payment for up to a month.
+                  </p>
+                  <button class="benefist__btn">Learn More</button>
+                </div>
+                <img
+                  class="benefist__img"
+                  src="./img/benefist3.png"
+                  alt=""
+                  width="445"
+                  height="445"
+                />
+              </div>
+            </div>
           </div>
         </div>
       </section>
