--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <nav class="header__nav">
             <ul class="header__list">
               <li class="header__item">
-                <a class="header__link" href="#">About</a>
+                <a class="header__link" href="about.html">About</a>
               </li>
               <li class="header__item">
                 <a class="header__link" href="#">Location</a>
