--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
           <nav class="header__nav">
             <ul class="header__list">
               <li class="header__item">
-                <a class="header__link" href="#">About</a>
+                <a class="header__link" href="about.html">About</a>
               </li>
               <li class="header__item">
                 <a class="header__link" href="#">Location</a>
@@ -252,7 +252,7 @@
           /></a>
           <ul class="footer__box--list">
             <li class="footer__box--tem">
-              <a class="footer__box--link" href="#">About</a>
+              <a class="footer__box--link" href="about.html">About</a>
             </li>
             <li class="footer__box--tem">
               <a class="footer__box--link" href="#">Location</a>
