--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           /></a>
           <ul class="footer__box--list">
             <li class="footer__box--tem">
-              <a class="footer__box--link" href="#">About</a>
+              <a class="footer__box--link" href="about.html">About</a>
             </li>
             <li class="footer__box--tem">
               <a class="footer__box--link" href="#">Location</a>
