--- a/about.html
+++ b/about.html
@@ -148,76 +148,78 @@
         </div>
       </section>
       <section class="faqs">
-        <div class="container faqs__container">
+        <div class="container">
           <h2 class="faqs__title">FAQs</h2>
           <div class="faqs__box">
-            <h3 class="faqs__mini__title">How it works</h3>
-            <div class="faqs__minibox">
-              <ul class="faqs__list faqs__list--one">
-                <li class="faqs__item">How do I download the app?</li>
-                <li class="faqs__item--one">
+            <h2 class="faqs__box__title">How it works</h2>
+            <div class="faqs__box--one">
+              <div class="faqs__minibox">
+                <h3 class="faqs__minititle">How do I download the app?</h3>
+                <p class="faqs__text1">
                   To download the Scoot app, you can search “Scoot” in both the
                   App and Google Play stores. An even simpler way to do it would
                   be to click the relevant link at the bottom of this page and
                   you’ll be re-directed to the correct page.
-                </li>
-              </ul>
-              <button class="faqs__btn faqs__btn__one"></button>
-              <ul class="faqs__list faqs__list--two">
-                <li class="faqs__item">Can I find a nearby Scoots?</li>
-                <li class="faqs__item--two">
+                </p>
+                <button class="faqs__btn faqs__btn--one"></button>
+              </div>
+              <div class="faqs__minibox">
+                <h3 class="faqs__minititle">Can I find a nearby Scoots?</h3>
+                <p class="faqs__text2">
                   To download the Scoot app, you can search “Scoot” in both the
                   App and Google Play stores. An even simpler way to do it would
                   be to click the relevant link at the bottom of this page and
                   you’ll be re-directed to the correct page.
-                </li>
-              </ul>
-              <button class="faqs__btn faqs__btn__two"></button>
-              <ul class="faqs__list faqs__list--three">
-                <li class="faqs__item">Do I need a license to ride?</li>
-                <li class="faqs__item--three">
+                </p>
+                <button class="faqs__btn faqs__btn--two"></button>
+              </div>
+              <div class="faqs__minibox">
+                <h3 class="faqs__minititle">Do I need a license to ride?</h3>
+                <p class="faqs__text3">
                   To download the Scoot app, you can search “Scoot” in both the
                   App and Google Play stores. An even simpler way to do it would
                   be to click the relevant link at the bottom of this page and
                   you’ll be re-directed to the correct page.
-                </li>
-              </ul>
-              <button class="faqs__btn faqs__btn__three"></button>
+                </p>
+                <button class="faqs__btn faqs__btn--three"></button>
+              </div>
             </div>
           </div>
           <div class="faqs__box">
-            <h3 class="faqs__mini__title">Safe driving</h3>
-            <div class="faqs__mini__title--one">
-              <ul class="faqs__list faqs__list--four">
-                <li class="faqs__item">Should I wear a helmet?</li>
-                <li class="faqs__item--four">
+            <h2 class="faqs__box__title">Safe driving</h2>
+            <div class="faqs__box--two">
+              <div class="faqs__minibox">
+                <h3 class="faqs__minititle">Should I wear a helmet?</h3>
+                <p class="faqs__text4">
                   Yes, please do! All cities have different laws. But we
                   strongly strongly strongly recommend always wearing a helmet
                   regardless of the local laws. We like you and we want you to
                   be as safe as possible while Scooting.
-                </li>
-              </ul>
-              <button class="faqs__btn faqs__btn__four"></button>
-              <ul class="faqs__list faqs__list--fiwe">
-                <li class="faqs__item">How about the rules & regulations?</li>
-                <li class="faqs__item--fiwe">
+                </p>
+                <button class="faqs__btn faqs__btn--four"></button>
+              </div>
+              <div class="faqs__minibox">
+                <h3 class="faqs__minititle">
+                  How about the rules & regulations?
+                </h3>
+                <p class="faqs__text5">
                   Yes, please do! All cities have different laws. But we
                   strongly strongly strongly recommend always wearing a helmet
                   regardless of the local laws. We like you and we want you to
                   be as safe as possible while Scooting.
-                </li>
-              </ul>
-              <button class="faqs__btn faqs__btn__fiwe"></button>
-              <ul class="faqs__list faqs__list--six">
-                <li class="faqs__item">What if I damage my Scoot?</li>
-                <li class="faqs__item--six">
+                </p>
+                <button class="faqs__btn faqs__btn--fiwe"></button>
+              </div>
+              <div class="faqs__minibox">
+                <h3 class="faqs__minititle">What if I damage my Scoot?</h3>
+                <p class="faqs__text6">
                   Yes, please do! All cities have different laws. But we
                   strongly strongly strongly recommend always wearing a helmet
                   regardless of the local laws. We like you and we want you to
                   be as safe as possible while Scooting.
-                </li>
-              </ul>
-              <button class="faqs__btn faqs__btn__six"></button>
+                </p>
+                <button class="faqs__btn faqs__btn--six"></button>
+              </div>
             </div>
           </div>
         </div>
@@ -308,5 +310,6 @@
         </symbol>
       </defs>
     </svg>
+    <script src="js/index.js"></script>
   </body>
 </html>
