add about responsive

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <p class="text">This site is not supported on your phone</p>
     <header class="header">
       <div class="container header__container">
         <div class="header__box">
@@ -148,9 +149,9 @@
         </div>
       </section>
       <section class="faqs">
-        <div class="container">
+        <div class="container faqs__container">
           <h2 class="faqs__title">FAQs</h2>
-          <div class="faqs__box">
+          <div class="faqs__box faqs__box--mb">
             <h2 class="faqs__box__title">How it works</h2>
             <div class="faqs__box--one">
               <div class="faqs__minibox">
