--- a/careers.html
+++ b/careers.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+    <title>Careers</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <!-- header qism birinchi sahifadan ko'chirib olib kelingan -->
+    <!-- header qism bosh sahifadan ko'chirib olib kelingan -->
     <p class="text">This site is not supported on your phone</p>
     <header class="header">
       <div class="container header__container">
@@ -40,56 +40,42 @@
       </div>
     </header>
     <main>
-      <section class="intro__about">
-        <div class="container intro__about__container">
-          <h2 class="intro__about__title">About</h2>
+      <section class="intro__careers">
+        <div class="container intro__careers__container">
+          <h2 class="intro__careers__title">Careers</h2>
         </div>
       </section>
-      <section class="benefist__about">
-        <div class="benefist__about__box">
-          <div class="benefist__about__box--two">
-            <div class="container benefist__about__container">
-              <div class="benefist__about__minibox">
-                <h2 class="benefist__about__title">
-                  Mobility for the digital era
+      <section class="benefist__careers">
+        <div class="benefist__careers__box">
+          <div class="benefist__careers__box--one">
+            <div class="container benefist__careers__container">
+              <div class="benefist__careers__minibox">
+                <h2 class="benefist__careers__title">
+                  Care to join our mission?
                 </h2>
-                <p class="benefist__about__text">
-                  Getting around should be simple (and even fun!) for everyone.
-                  We embrace technology to provide low cost, smart access to
-                  scooters at your fingertips.
+                <p class="benefist__careers__text">
+                  We’re always looking for ambitious individuals to help us on
+                  our journey. If you’re passionate about our mission to provide
+                  clean, accessible transport to improve urban living we want to
+                  hear from you!
                 </p>
+                <button class="benefist__careers__btn">Say Hello</button>
               </div>
               <img
-                class="benefist__about__img"
-                src="./img/benefist_about1.png"
+                class="benefist__careers__img"
+                src="./img/benefist_careers.png"
                 alt=""
+                width="445"
+                height="445"
               />
-            </div>
-          </div>
-        </div>
-        <div class="benefist__about__box--three">
-          <div class="benefist__about__box--four">
-            <div class="container benefist__about__container">
-              <img
-                class="benefist__about__img"
-                src="./img/benefist_about2.png"
-                alt=""
-              />
-              <div class="benefist__about__minibox">
-                <h2 class="benefist__about__title">Better urban living</h2>
-                <p class="benefist__about__text">
-                  We’re helping connect cities and bring people closer together.
-                  Our scooters are also fully-electric and we offset the minimal
-                  carbon footprint for each ride.
-                </p>
-              </div>
             </div>
           </div>
         </div>
       </section>
+      <!-- values section i about pages dagi bilan bir xil bulganligi sababli about pages dab ko'chirib olib kelingan -->
       <section class="values__about">
         <div class="container values__about__container">
-          <h2 class="values__about__title">Our values</h2>
+          <h2 class="values__about__title">Why join us?</h2>
           <ul class="values__about__list">
             <li class="values__about__item">
               <img
@@ -149,80 +135,49 @@
           </ul>
         </div>
       </section>
-      <section class="faqs">
-        <div class="container faqs__container">
-          <h2 class="faqs__title">FAQs</h2>
-          <div class="faqs__box faqs__box--mb">
-            <h2 class="faqs__box__title">How it works</h2>
-            <div class="faqs__box--one">
-              <div class="faqs__minibox">
-                <h3 class="faqs__minititle">How do I download the app?</h3>
-                <p class="faqs__text1">
-                  To download the Scoot app, you can search “Scoot” in both the
-                  App and Google Play stores. An even simpler way to do it would
-                  be to click the relevant link at the bottom of this page and
-                  you’ll be re-directed to the correct page.
-                </p>
-                <button class="faqs__btn faqs__btn--one"></button>
-              </div>
-              <div class="faqs__minibox">
-                <h3 class="faqs__minititle">Can I find a nearby Scoots?</h3>
-                <p class="faqs__text2">
-                  To download the Scoot app, you can search “Scoot” in both the
-                  App and Google Play stores. An even simpler way to do it would
-                  be to click the relevant link at the bottom of this page and
-                  you’ll be re-directed to the correct page.
-                </p>
-                <button class="faqs__btn faqs__btn--two"></button>
-              </div>
-              <div class="faqs__minibox">
-                <h3 class="faqs__minititle">Do I need a license to ride?</h3>
-                <p class="faqs__text3">
-                  To download the Scoot app, you can search “Scoot” in both the
-                  App and Google Play stores. An even simpler way to do it would
-                  be to click the relevant link at the bottom of this page and
-                  you’ll be re-directed to the correct page.
-                </p>
-                <button class="faqs__btn faqs__btn--three"></button>
-              </div>
+      <section class="connection">
+        <div class="container connection__container">
+          <div class="connection__box">
+            <div class="connection__box--one">
+              <h2 class="connection__title">General Manager</h2>
+              <p class="connection__text">Jakarta, Indonesia</p>
             </div>
+            <button class="connection__btn">Apply</button>
           </div>
-          <div class="faqs__box">
-            <h2 class="faqs__box__title">Safe driving</h2>
-            <div class="faqs__box--two">
-              <div class="faqs__minibox">
-                <h3 class="faqs__minititle">Should I wear a helmet?</h3>
-                <p class="faqs__text4">
-                  Yes, please do! All cities have different laws. But we
-                  strongly strongly strongly recommend always wearing a helmet
-                  regardless of the local laws. We like you and we want you to
-                  be as safe as possible while Scooting.
-                </p>
-                <button class="faqs__btn faqs__btn--four"></button>
-              </div>
-              <div class="faqs__minibox">
-                <h3 class="faqs__minititle">
-                  How about the rules & regulations?
-                </h3>
-                <p class="faqs__text5">
-                  Yes, please do! All cities have different laws. But we
-                  strongly strongly strongly recommend always wearing a helmet
-                  regardless of the local laws. We like you and we want you to
-                  be as safe as possible while Scooting.
-                </p>
-                <button class="faqs__btn faqs__btn--fiwe"></button>
-              </div>
-              <div class="faqs__minibox">
-                <h3 class="faqs__minititle">What if I damage my Scoot?</h3>
-                <p class="faqs__text6">
-                  Yes, please do! All cities have different laws. But we
-                  strongly strongly strongly recommend always wearing a helmet
-                  regardless of the local laws. We like you and we want you to
-                  be as safe as possible while Scooting.
-                </p>
-                <button class="faqs__btn faqs__btn--six"></button>
-              </div>
+          <div class="connection__box">
+            <div class="connection__box--one">
+              <h2 class="connection__title">UI/UX Designer</h2>
+              <p class="connection__text">Yokohama, Japan</p>
             </div>
+            <button class="connection__btn">Apply</button>
+          </div>
+          <div class="connection__box">
+            <div class="connection__box--one">
+              <h2 class="connection__title">Blog Content Copywriter</h2>
+              <p class="connection__text">New York, United States</p>
+            </div>
+            <button class="connection__btn">Apply</button>
+          </div>
+          <div class="connection__box">
+            <div class="connection__box--one">
+              <h2 class="connection__title">Graphic Designer</h2>
+              <p class="connection__text">New York, United States</p>
+            </div>
+            <button class="connection__btn">Apply</button>
+          </div>
+          <div class="connection__box">
+            <div class="connection__box--one">
+              <h2 class="connection__title">Fleet Supervisor</h2>
+              <p class="connection__text">Jakarta, Indonesia</p>
+            </div>
+            <button class="connection__btn">Apply</button>
+          </div>
+          <div class="connection__box">
+            <div class="connection__box--one">
+              <h2 class="connection__title">UX Analyst</h2>
+              <p class="connection__text">London, United Kingdom</p>
+            </div>
+            <button class="connection__btn">Apply</button>
           </div>
         </div>
       </section>
@@ -249,7 +204,7 @@
         </div>
       </section>
     </main>
-    <!-- footer qism birinchi sahifadan ko'chirib olib kelingan -->
+    <!-- footer qism bosh sahifadan cho'chirib olib kelingan -->
     <footer class="footer">
       <div class="container footer__container">
         <div class="footer__box">
@@ -314,6 +269,5 @@
         </symbol>
       </defs>
     </svg>
-    <script src="js/index.js"></script>
   </body>
 </html>
