--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                 <a class="header__link" href="#">Location</a>
               </li>
               <li class="header__item">
-                <a class="header__link" href="#">Careers</a>
+                <a class="header__link" href="careers.html">Careers</a>
               </li>
             </ul>
           </nav>
@@ -264,7 +264,7 @@
               <a class="footer__box--link" href="#">Location</a>
             </li>
             <li class="footer__box--tem">
-              <a class="footer__box--link" href="#">Careers</a>
+              <a class="footer__box--link" href="careers.html">Careers</a>
             </li>
           </ul>
         </div>
