--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                 <a class="header__link" href="about.html">About</a>
               </li>
               <li class="header__item">
-                <a class="header__link" href="#">Location</a>
+                <a class="header__link" href="./locations.html">Location</a>
               </li>
               <li class="header__item">
                 <a class="header__link" href="careers.html">Careers</a>
@@ -261,7 +261,7 @@
               <a class="footer__box--link" href="about.html">About</a>
             </li>
             <li class="footer__box--tem">
-              <a class="footer__box--link" href="#">Location</a>
+              <a class="footer__box--link" href="./locations.html">Location</a>
             </li>
             <li class="footer__box--tem">
               <a class="footer__box--link" href="careers.html">Careers</a>
