--- a/locations.html
+++ b/locations.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scoot</title>
-
-    <link rel="stylesheet" href="./css/nomalize.css" />
+    <title>Locations</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- header qism birinchi sahifadan ko'chirib olib kelingan -->
     <p class="text">This site is not supported on your phone</p>
     <header class="header">
       <div class="container header__container">
-        <h1 class="visually-hidden">Welcome to site Scoot</h1>
         <div class="header__box">
           <button class="header__menu"></button>
           <a class="header__logo" href="index.html"
@@ -42,122 +40,32 @@
       </div>
     </header>
     <main>
-      <section class="intro">
-        <div class="container intro__container">
-          <h2 class="intro__title">Scooter sharing made simple</h2>
-          <p class="intro__text">
-            Scoot takes the hassle out of urban mobility. Our bikes are placed
-            in convenient locations in each of our cities. Use our app to locate
-            the nearest bike, unlock it with a tap, and you’re away!
-          </p>
-          <button class="intro__btn">Get Scootin</button>
-          <hr class="intro__decoration" />
+      <!-- intro qism uxshash bulgani uchun Careers qismidan ko'chirib olingan faqat title o'zgartirilgan -->
+      <section class="intro__careers">
+        <div class="container intro__careers__container">
+          <h2 class="intro__careers__title">Locations</h2>
         </div>
       </section>
-      <section class="manual">
-        <div class="container manual__container">
-          <hr class="manual__decoration" />
-          <ul class="manual__list">
-            <li class="manual__item manual__item--one">
-              <h3 class="manual__title">Locate with app</h3>
-              <p class="manual__text">
-                Use the app to find the nearest scooter to you. We are
-                continuously placing scooters in the areas with most demand, so
-                one should never be too far away.
-              </p>
-            </li>
-            <li class="manual__item manual__item--two">
-              <h3 class="manual__title">Pick your scooter</h3>
-              <p class="manual__text">
-                We show the most important info for the scooters closest to you.
-                So you know how much charge they have left and can see roughly
-                how much it will cost.
-              </p>
-            </li>
-            <li class="manual__item manual__item--three">
-              <h3 class="manual__title">Enjoy the ride</h3>
-              <p class="manual__text">
-                Scan the QR code and the bike will unlock. Retract the cable
-                lock, put on a helmet, and you’re off! Always lock bikes away
-                from walkways and accessibility ramps.
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section class="benefist">
-        <div class="benefist__container">
-          <div class="benefist__bgi--one">
-            <div class="benefist__bgi--decoration">
-              <div class="container benefist__content">
-                <div class="benefist__box--one">
-                  <h2 class="benefist__title">Easy to use riding telemetry</h2>
-                  <p class="benefist__text">
-                    The Scoot app is available with riding telemetry. This means
-                    it can show you your average speed, how long you've been
-                    using the scooter, your traveling distance, and many more
-                    things all in an easy to use app.
-                  </p>
-                  <button class="benefist__btn">Learn More</button>
-                </div>
-                <img
-                  class="benefist__img"
-                  src="./img/benefist1.png"
-                  alt=""
-                  width="445"
-                  height="445"
-                />
-              </div>
-            </div>
-          </div>
-          <div class="benefist__bgi--two">
-            <div class="benefist__bgi--decoration1">
-              <div class="container benefist__content">
-                <img
-                  class="benefist__img"
-                  src="./img/benefist2.png"
-                  alt=""
-                  width="445"
-                  height="445"
-                />
-                <div class="benefist__box--one">
-                  <h2 class="benefist__title">Coming to a city near you</h2>
-                  <p class="benefist__text">
-                    Scoot is available in 4 major cities so far. We’re expanding
-                    rapidly, so be sure to let us know if you want to see us in
-                    your hometown. We’re aiming to let our scooters loose on 23
-                    cities over the coming year.
-                  </p>
-                  <button class="benefist__btn">Learn More</button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="benefist__bgi--three">
-            <div class="benefist__bgi--decoration2">
-              <div class="container benefist__content">
-                <div class="benefist__box--one">
-                  <h2 class="benefist__title">Zero hassle payments</h2>
-                  <p class="benefist__text">
-                    Our payment is as easy as one two three. We accept most
-                    credit cards and debit cards. You can also link your PayPal
-                    account inside the app. Need to pay later? No worries! You
-                    can defer payment for up to a month.
-                  </p>
-                  <button class="benefist__btn">Learn More</button>
-                </div>
-                <img
-                  class="benefist__img"
-                  src="./img/benefist3.png"
-                  alt=""
-                  width="445"
-                  height="445"
-                />
-              </div>
-            </div>
+      <section class="location">
+        <div class="container location__container">
+          <iframe
+            class="location__maps"
+            src="https://yandex.uz/maps/-/CCUCIVQmhA"
+            width="1110"
+            height="543"
+          ></iframe>
+          <div class="location__box">
+            <h2 class="location__title">Your city not listed?</h2>
+            <p class="location__text">
+              If you’d like to see Scoot in your hometown, be sure to let us
+              know. We track requests and plan launches based on demand. Feel
+              free to message us by clicking the link or messaging us on social.
+            </p>
+            <button class="location__btn">Message Us</button>
           </div>
         </div>
       </section>
+      <!-- registration section i hamma qismlarda bir xil bulganligi uchun alohida kod yozilmagan 1-sahifadaisi ko'chirib olib kelingan-->
       <section class="registration">
         <div class="container registration__container">
           <h2 class="registration__title">Sign up and Scoot off today</h2>
@@ -180,6 +88,7 @@
         </div>
       </section>
     </main>
+    <!-- footer qism birinchi sahifadan ko'chirib olib kelingan -->
     <footer class="footer">
       <div class="container footer__container">
         <div class="footer__box">
@@ -244,5 +153,6 @@
         </symbol>
       </defs>
     </svg>
+    <script src="js/index.js"></script>
   </body>
 </html>
