add resonsive header menu

--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
     <p class="text">This site is not supported on your phone</p>
     <header class="header">
       <div class="container header__container">
+        <h1 class="visually-hidden">Welcome to site Scoot</h1>
         <div class="header__box">
           <button class="header__menu"></button>
           <a class="header__logo" href="index.html"
@@ -34,9 +35,9 @@
                 <a class="header__link" href="careers.html">Careers</a>
               </li>
             </ul>
+            <button class="header__btn">Get Scootin</button>
           </nav>
         </div>
-        <button class="header__btn">Get Scootin</button>
       </div>
     </header>
     <main>
