--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <a class="header__link" href="careers.html">Careers</a>
               </li>
             </ul>
+            <button class="header__btn">Get Scootin</button>
           </nav>
         </div>
-        <button class="header__btn">Get Scootin</button>
       </div>
     </header>
     <main>
@@ -244,5 +244,6 @@
         </symbol>
       </defs>
     </svg>
+    <script src="js/index.js"></script>
   </body>
 </html>
